readme: Documenting.